packages/llvm/src/tests/variable_declaration/snapshots/llvm__tests__variable_declaration__variable_assignment__            let x  = (1 === 2);            x = (1 > 2);            .snap
---
source: packages/llvm/src/tests/variable_declaration/variable_assignment.rs
expression: output

---
; ModuleID = 'main'
source_filename = "main"

define void @main() {
entry:
  %"x|_|" = alloca i1, align 1
  store i1 false, i1* %"x|_|", align 1
  store i1 false, i1* %"x|_|", align 1
  ret void
}

